G-130 + G-123 + G-97
